<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/track_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/music_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#C93700B3"
        app:cardElevation="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/album_cover"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/album_default_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_album"
                android:layout_marginStart="8sp"
                android:layout_marginEnd="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="8sp"
                android:layout_marginEnd="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp">

                <TextView
                    android:id="@+id/track_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".7"
                    android:text="@string/track_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/artist"
                        android:textColor="#AEFFFFFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@string/album"
                        android:textColor="#AEFFFFFF"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>